Update Lists and ViewPager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DeliveryPagerActivity"
+            android:label="Delivery">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".SlidingTab.MainTabActivity"/>
+        </activity>
     </application>
 
 </manifest>
