--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
-    compile 'com.cocosw:bottomsheet:1.+@aar'
+    compile 'com.android.support:support-annotations:21.0.3'
+    compile 'com.github.clans:fab:1.5.2'
 }
