--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.android.support:support-annotations:21.0.3'
     compile 'com.github.clans:fab:1.5.2'
     compile files('libs/volley.jar')
+    compile 'com.google.android.gms:play-services:7.5.0'
 }
