--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:support-annotations:21.0.3'
     compile 'com.github.clans:fab:1.5.2'
     compile files('libs/volley.jar')
+    compile 'com.google.android.gms:play-services:6.5.87'
 }
